# askify

./: .gitignore  .replit  README.md  main.py  overview.txt  pyproject.toml  replit.md  requirements.txt
attached_assets/: cacheengine_1754423185591.py  codeexecutor_1754423185592.py  csvloader_1754423185592.py  graphing_1754423185593.py  groq_api_1754423185589.py  helpers_1754423212700.py  llmrag_1754423185590.py  main_1754423226683.py  sqlquery_1754423185590.py
backend/: cacheengine.py  codeexecutor.py  csvloader.py  graphing.py  groq_api.py  llmrag.py  sqlquery.py
utils/: helpers.py
